# Hacka2-Phase2

./: CLAUDE.md  DEVELOPER_GUIDE.md  README.md  pyproject.toml
docs/: claude_usage.md  monorepo_best_practices.md  spec_naming.md  structure.md
history/prompts/1-phase-ii-task-crud/: 1-specify-phase-ii-task-crud.spec.prompt.md  2-plan-phase-ii-task-crud.plan.prompt.md  3-tasks-phase-ii-task-crud.tasks.prompt.md  4-implement-phase-ii-task-crud.implementation.prompt.md
history/prompts/2-auth-security-phase-ii/: 1-specify-auth-security-phase-ii.spec.prompt.md  2-plan-auth-security-phase-ii.plan.prompt.md  3-tasks-auth-security-phase-ii.tasks.prompt.md  4-implement-auth-security-phase-ii.implementation.prompt.md
history/prompts/3-monorepo-structure/: 1-specify-monorepo-structure.spec.prompt.md  2-plan-monorepo-structure.plan.prompt.md  3-tasks-monorepo-structure.tasks.prompt.md
history/prompts/constitution/: 1-establish-hackathon-ii-phase-ii-constitution.constitution.prompt.md
scripts/: monorepo-tools.sh
specs/: CLAUDE.md.template
specs/1-phase-ii-task-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-phase-ii-task-crud/checklists/: requirements.md
specs/1-phase-ii-task-crud/contracts/: tasks-api.yaml
specs/2-auth-security-phase-ii/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-monorepo-structure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-monorepo-structure/checklists/: requirements.md
specs/template/: feature-template.md  plan.md  spec.md  tasks.md
(+2 files in other folders)
